# pratc

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  AUTONOMOUS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.cli  Dockerfile.web  GUIDELINE.md  INSTALL.md  LICENSE  Makefile  PLAN.md  PLANS.md  RATELIMITS.md  README.md  REPORT_TODO.md  ROADMAP.md  TODO.md  VERSION2.0.md  WAVE_B_OWNERSHIP.md  docker-compose.yml  go.mod  go.sum  prATC _ App Architecture Plan.md  pratc-openclaw-tree.sh  pratc-openclaw.sh  pratc.md  run-tree-analysis.sh  test_scheduler_debug.go  v1.5-triage-engine-plan.md  version1.4.1.md  version1.4.2.md  version1.4.md
.beads/: config.yaml  issues.jsonl
.sisyphus/: boulder.json
autonomous/: GAP_LIST.md  RUNBOOK.md  STATE.yaml  WAVE_A_OWNERSHIP.md
contracts/: action-plan.json  analysis-response.json  cluster-request.json  cluster-response.json  duplicate-detection-request.json  duplicate-response.json  graph-response.json  health-response.json  plan-response.json  semantic-analysis-request.json  semantic-conflict-response.json  shared-definitions.json
docs/: INTERNAL-ROADMAP.md  api-contracts.md  architecture.md  database-schema.md  (+15 more)
ml-service/: AGENTS.md  README.md  pyproject.toml
ml-service/src/pratc_ml/: __init__.py  cli.py  clustering.py  duplicates.py  logging.py  models.py  overlap.py  similarity.py
ml-service/src/pratc_ml/providers/: __init__.py  minimax.py  voyage.py
ml-service/tests/: test_cli.py  test_clustering.py  test_duplicate_synthesis_models.py  test_duplicates.py  test_models.py  test_overlap.py  test_similarity_red.py
(+1353 files in other folders)
