[project]
name = "pratc-ml"
version = "0.1.0"
description = "Python ML service for prATC"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.2.0,<3.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "scikit-learn>=1.7.0,<2.0.0",
  "datasketch>=1.6.4,<2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0,<9.0.0",
  "pytest-cov>=7.0.0,<8.0.0",
  "ruff>=0.12.0,<0.13.0",
]
ml = [
  "hdbscan>=0.8.40,<0.9.0",
  "sentence-transformers>=5.1.0,<6.0.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
markers = [
  "unit: fast deterministic test coverage",
  "slow: integration tests requiring model loading or external services",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling>=1.27.0,<2.0.0"]
build-backend = "hatchling.build"
